--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 body {
     box-sizing: border-box;
+
 }
 
 * {
     border: 0 solid red;
     margin: auto;
 }
-
+/*
+#img {
+    background-image: url();
+    background-repeat: no-repeat;
+    opacity: 0.9;
+    width: 100%;
+    height: 100%;
+}
+*/
 .container {
     display: flex;
     margin: auto;
     min-height: 30vh;
-    background-color:beige;
+    background-color: beige;
     flex-direction: column;
 }
 
@@ -28,7 +37,12 @@ header {
 
 #Hand {
     padding: -9px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: .5rem;
+}
+
+.theNext{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .card {
@@ -57,7 +71,7 @@ header {
     position: flex;
     display: inline;
     margin: 5px 50px -10px;
-    font-size: 11rem;
+    font-size: 8rem;
 }
 
 .higherButton {
@@ -78,23 +92,28 @@ header {
 
 #result {
     padding: 2px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #score {
     padding: 2px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 .restButton {
+    width: 70px;
     border-style: groove;
     border-width: 3px;
     border-color: grey;
     border-radius: 4px;
 }
+
 .bottomBox {
     margin: 19px;
     padding: 3vh 1vw 3vh;
     flex-grow: .5;
     font-size: 30px;
-    text-align: center;
+    text-align: left;
     background-color: lightgrey;
     border: 1px solid black;
     font-size: 1rem;
