--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     box-sizing: border-box;
-
 }
 
 * {
     border: 0 solid red;
     margin: auto;
 }
+
 /*
 #img {
     background-image: url();
@@ -25,8 +25,8 @@ body {
 }
 
 header {
-    margin: 19px;
-    padding: 3vh 1vw 3vh;
+    margin: 10px;
+    padding: 1vh 1vw 1vh;
     flex-grow: .5;
     font-size: 30px;
     text-align: center;
@@ -37,12 +37,12 @@ header {
 
 #Hand {
     padding: -9px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: .5rem;
 }
 
-.theNext{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.theNext {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .card {
@@ -58,10 +58,6 @@ header {
     background-color: whitesmoke;
 }
 
-#cardWeight {
-    display: none;
-}
-
 #cardValue {
     padding: .5rem;
     font-size: 4rem;
@@ -74,8 +70,15 @@ header {
     font-size: 8rem;
 }
 
+#cardWeight {
+  display: none;
+}
+
+
 .higherButton {
-    margin: 20px;
+    margin: 7px;
+    width: 6vw;
+    font-size: medium;
     border-style: groove;
     border-width: 3px;
     border-color: grey;
@@ -83,7 +86,9 @@ header {
 }
 
 .lowerButton {
-    margin: 20px;
+    margin: 7px;
+    width: 6vw;
+    font-size: medium;
     border-style: groove;
     border-width: 3px;
     border-color: grey;
@@ -92,16 +97,18 @@ header {
 
 #result {
     padding: 2px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #score {
     padding: 2px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .restButton {
-    width: 70px;
+    margin: 5px;
+    width: 6vw;
+    font-size: medium;
     border-style: groove;
     border-width: 3px;
     border-color: grey;
