--- a/style.css
+++ b/style.css
@@ -37,12 +37,8 @@ header {
 
 #Hand {
     padding: -9px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     border-radius: .5rem;
-}
-
-.theNext {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .card {
@@ -65,8 +61,8 @@ header {
 
 #cardSuit {
     position: flex;
+    margin: 5rem;
     display: inline;
-    margin: 5px 50px -10px;
     font-size: 8rem;
 }
 
@@ -74,6 +70,9 @@ header {
   display: none;
 }
 
+.theNext {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
 .higherButton {
     margin: 7px;
@@ -96,12 +95,14 @@ header {
 }
 
 #result {
-    padding: 2px;
+    display: inline;
+    padding: 4px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #score {
-    padding: 2px;
+    display: inline;
+    padding: 4px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
