--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ header {
     font-size: 1.5rem;
 }
 
+h3 {
+    text-align: center;
+    margin: 12px;
+}
+
 #Hand {
     padding: -9px;
     /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
@@ -67,53 +72,75 @@ header {
 }
 
 #cardWeight {
-  display: none;
+    display: none;
 }
-
+/* Done */
 .theNext {
+    text-align: center;
+    margin: 12px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
+/* Done */
 .higherButton {
     margin: 7px;
     width: 6vw;
     font-size: medium;
     border-style: groove;
-    border-width: 3px;
-    border-color: grey;
+    border-width: 4px;
     border-radius: 4px;
+    border-color: green;
 }
-
+/* Done */
 .lowerButton {
     margin: 7px;
     width: 6vw;
     font-size: medium;
     border-style: groove;
-    border-width: 3px;
-    border-color: grey;
+    border-width: 4px;
     border-radius: 4px;
+    border-color: green;
+}
+/* ? */
+.resultScore {
+    padding: 10px;
+    width: 55vh;
 }
 
+/* Almost done */
 #result {
-    display: inline;
-    padding: 4px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display:inline-block;
+    position: relative;
+    text-align: left;
+    padding: 2px;
+    width: 9rem;
+    font-size: large;
+    border-style: groove;
+    border-width: 2px;
+    border-color: whitesmoke;
+    background-color:whitesmoke;
 }
-
+/* Almost done */
 #score {
-    display: inline;
-    padding: 4px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display:inline-block;
+    position: relative;
+    text-align: center;
+    padding: 2px;
+    width: 11rem;
+    font-size: large;
+    border-style: groove;
+    border-width: 2px;
+    border-color: whitesmoke;
+    background-color:whitesmoke;
 }
-
+/* Done */
 .restButton {
-    margin: 5px;
+    margin: 7px;
     width: 6vw;
     font-size: medium;
     border-style: groove;
     border-width: 3px;
-    border-color: grey;
     border-radius: 4px;
+    border-color: red;
 }
 
 .bottomBox {
