--- a/style.css
+++ b/style.css
@@ -2,20 +2,19 @@ body {
     box-sizing: border-box;
 }
 
+/* Delete before submission */
 * {
     border: 0 solid red;
     margin: auto;
 }
 
-/*
 #img {
-    background-image: url();
+    background-image: url(./clouds.jpg);
     background-repeat: no-repeat;
-    opacity: 0.9;
     width: 100%;
-    height: 100%;
+    height: 110%;
 }
-*/
+
 .container {
     display: flex;
     margin: auto;
@@ -38,14 +37,15 @@ header {
 h3 {
     text-align: center;
     margin: 12px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #Hand {
     padding: -9px;
-    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     border-radius: .5rem;
 }
 
+/**/
 .card {
     position: relative;
     margin: -.5px;
@@ -59,27 +59,32 @@ h3 {
     background-color: whitesmoke;
 }
 
+/* Done */
 #cardValue {
     padding: .5rem;
     font-size: 4rem;
 }
 
+/**/
 #cardSuit {
     position: flex;
     margin: 5rem;
     display: inline;
-    font-size: 8rem;
+    font-size: 9rem;
 }
 
+/* Done */
 #cardWeight {
     display: none;
 }
+
 /* Done */
 .theNext {
     text-align: center;
     margin: 12px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
 /* Done */
 .higherButton {
     margin: 7px;
@@ -90,6 +95,7 @@ h3 {
     border-radius: 4px;
     border-color: green;
 }
+
 /* Done */
 .lowerButton {
     margin: 7px;
@@ -100,28 +106,30 @@ h3 {
     border-radius: 4px;
     border-color: green;
 }
-/* ? */
+
+/* Done */
 .resultScore {
-    padding: 10px;
+    padding: 6px 12px 6px 40px;
     width: 55vh;
 }
 
-/* Almost done */
+/* Done */
 #result {
-    display:inline-block;
+    display: inline-block;
     position: relative;
     text-align: left;
     padding: 2px;
-    width: 9rem;
+    width: 10rem;
     font-size: large;
     border-style: groove;
     border-width: 2px;
-    border-color: whitesmoke;
-    background-color:whitesmoke;
+    border-color: black;
+    background-color: whitesmoke;
 }
-/* Almost done */
+
+/* Done */
 #score {
-    display:inline-block;
+    display: inline-block;
     position: relative;
     text-align: center;
     padding: 2px;
@@ -129,9 +137,10 @@ h3 {
     font-size: large;
     border-style: groove;
     border-width: 2px;
-    border-color: whitesmoke;
-    background-color:whitesmoke;
+    border-color: black;
+    background-color: whitesmoke;
 }
+
 /* Done */
 .restButton {
     margin: 7px;
@@ -142,10 +151,10 @@ h3 {
     border-radius: 4px;
     border-color: red;
 }
-
+/**/
 .bottomBox {
-    margin: 19px;
-    padding: 3vh 1vw 3vh;
+    margin: 10px;
+    padding: 2vh 1vw 2vh;
     flex-grow: .5;
     font-size: 30px;
     text-align: left;
