--- a/style.css
+++ b/style.css
@@ -1,164 +1,155 @@
 body {
     box-sizing: border-box;
-}
-
-/* Delete before submission */
-* {
-    border: 0 solid red;
     margin: auto;
-}
-
-#img {
-    background-image: url(./clouds.jpg);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 110%;
 }
 
 .container {
+    background-image: url(pexels-photo-10838922.jpeg);
     display: flex;
     margin: auto;
-    min-height: 30vh;
-    background-color: beige;
     flex-direction: column;
 }
 
 header {
     margin: 10px;
     padding: 1vh 1vw 1vh;
-    flex-grow: .5;
-    font-size: 30px;
     text-align: center;
-    background-color: lightgrey;
-    border: 1px solid black;
-    font-size: 1.5rem;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 1.9rem;
+    color: darkblue;
+    background-color: rgba(255, 99, 71, 1);
+    opacity: 0.7;
 }
 
 h3 {
     text-align: center;
     margin: 12px;
+    color: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #Hand {
-    padding: -9px;
+    padding: 1px;
     border-radius: .5rem;
+    border-color: lightblue;
+    box-shadow: 0px 4px 0px .5px darkslategray;
+    margin: auto;
 }
 
-/**/
 .card {
     position: relative;
     margin: -.5px;
-    height: 50vh;
+    height: 47.1vh;
     width: 17vw;
-    border: 2px solid black;
+    border: 2.2px solid darkblue;
     border-radius: .5rem;
     display: inline;
     float: left;
     font-size: 8rem;
     background-color: whitesmoke;
+    text-align: center;
 }
 
-/* Done */
 #cardValue {
-    padding: .5rem;
     font-size: 4rem;
+    position: relative;
+    padding-bottom: 0.7em;
 }
 
-/**/
 #cardSuit {
-    position: flex;
-    margin: 5rem;
+    position: relative;
+    bottom: 60px;
     display: inline;
-    font-size: 9rem;
+    font-size: 8rem;
 }
 
-/* Done */
 #cardWeight {
     display: none;
 }
 
-/* Done */
+/* HTML Text */
 .theNext {
     text-align: center;
+    color: white;
     margin: 12px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-/* Done */
 .higherButton {
     margin: 7px;
-    width: 6vw;
     font-size: medium;
     border-style: groove;
     border-width: 4px;
-    border-radius: 4px;
-    border-color: green;
+    border-radius: 6px;
+    border-color: lightblue;
+    box-shadow: 0px 5px 1px 5px darkslategray;
 }
 
-/* Done */
 .lowerButton {
     margin: 7px;
-    width: 6vw;
     font-size: medium;
     border-style: groove;
     border-width: 4px;
-    border-radius: 4px;
-    border-color: green;
+    border-radius: 6px;
+    border-color: lightblue;
+    box-shadow: 0px 5px 1px 5px darkslategray;
 }
 
-/* Done */
-.resultScore {
-    padding: 6px 12px 6px 40px;
-    width: 55vh;
-}
-
-/* Done */
+/* You were: */
 #result {
     display: inline-block;
-    position: relative;
-    text-align: left;
-    padding: 2px;
+    text-align: center;
+    padding: 3px;
     width: 10rem;
+    opacity: .9;
     font-size: large;
-    border-style: groove;
-    border-width: 2px;
-    border-color: black;
-    background-color: whitesmoke;
+    color: whitesmoke;
+    border-radius: 5%;
+    box-shadow: 0px 2px 18px 5px lightblue;
+    margin: auto;
 }
 
-/* Done */
+/* You've got 0/0 correct. */
 #score {
     display: inline-block;
-    position: relative;
     text-align: center;
-    padding: 2px;
-    width: 11rem;
+    padding: 2.5px;
+    width: 12rem;
+    opacity: .9;
     font-size: large;
-    border-style: groove;
-    border-width: 2px;
-    border-color: black;
-    background-color: whitesmoke;
+    color: whitesmoke;
+    border-radius: 5%;
+    box-shadow: 0px 2px 18px 5px lightblue;
+    margin: auto;
 }
 
-/* Done */
+.resultScore{
+    margin: auto;
+}
+
 .restButton {
-    margin: 7px;
-    width: 6vw;
     font-size: medium;
     border-style: groove;
-    border-width: 3px;
-    border-radius: 4px;
-    border-color: red;
+    border-width: 4px;
+    border-radius: 6px;
+    border-color: lightblue;
+    box-shadow: 0px 5px 1px 5px darkslategray;
 }
-/**/
+.resetBTN{
+    margin: auto;
+}
+
+.buttons{
+    margin: auto;
+}
+
 .bottomBox {
     margin: 10px;
-    padding: 2vh 1vw 2vh;
-    flex-grow: .5;
-    font-size: 30px;
+    padding: 1vh 1vw 1vh;
     text-align: left;
-    background-color: lightgrey;
-    border: 1px solid black;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    color: darkblue;
+    background-color: rgba(255, 99, 71, 1);
+    opacity: 0.7;
 }
